Fix styling issues
Label in dialog boxes truncates text that is too long.
This is fixed by changing the font.

--- a/src/main/resources/css/rogue.css
+++ b/src/main/resources/css/rogue.css
@@ -1,7 +1,3 @@
-.root {
-    -fx-font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
-}
-
 /** Main */
 
 .main-container {
@@ -28,6 +24,8 @@
 
 .main-input-field {
     -fx-padding: 0.333333em 0.583em 0.333333em 0.583em;
+    -fx-font-size: 14px;
+    -fx-font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
     -fx-background-insets: 0, 1px;
     -fx-background-radius: 3px, 2px;
     -fx-cursor: text;
